--- a/src/App.css
+++ b/src/App.css
@@ -6757,10 +6757,17 @@ header select{width: 100%;padding: 5px;}
 header label{display: block;color: #fff;}
 section{position: relative;float: left;width: 100%;padding: 15px;}
 table{width:auto !important;min-width:500px;background: #ccc;box-shadow: 0 0 5px -2px #000;margin: 0; border-radius: 2px;border-collapse: separate;border-spacing: 1px;overflow:hidden;box-sizing: border-box }
-table table{box-shadow: none;position: static;min-width: 0;width: auto !important;border-spacing: 0px;border-radius: 0;}
+table table{box-shadow: none;position: static;min-width: 0;width: 100% !important;border-spacing: 0px;border-radius: 0;}
 thead td{background:#fff;color: #4285F4;padding: 7px !important;}
 td{background:  #fff;border: 0 !important;padding: 0 7px !important;font-weight: bold;}
 td:last-child{font-weight: normal;}
 thead tr td{background: #ddd;}
 tbody td:first-child{cursor: pointer;}
 tbody tr:hover td{background: #eee;}
+table table td:last-child{float: right;}
+.good{height:20px;width: 20px;background: #0c0;margin-top: 3px;}
+.satisfactory{height:20px;width: 20px;background: #6c0;margin-top: 3px;}
+.moderately{height:20px;width: 20px;background: #ff0;margin-top: 3px;}
+.poor{height:20px;width: 20px;background: #f90;margin-top: 3px;}
+.very_poor{height:20px;width: 20px;background: #f00;margin-top: 3px;}
+.sever{height:20px;width: 20px;background: brown;margin-top: 3px;}
