--- a/src/App.css
+++ b/src/App.css
@@ -6770,4 +6770,4 @@ table table td:last-child{float: right;}
 .moderately{height:20px;width: 20px;background: #ff0;margin-top: 3px;}
 .poor{height:20px;width: 20px;background: #f90;margin-top: 3px;}
 .very_poor{height:20px;width: 20px;background: #f00;margin-top: 3px;}
-.sever{height:20px;width: 20px;background: brown;margin-top: 3px;}
+.severe{height:20px;width: 20px;background: brown;margin-top: 3px;}  
